# CampbellViewer

./: .gitignore  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_wivis.txt  setup.cfg  switcher.json  user_guide.md  wivis_campbellviewer_environment.yml
.github/scripts/: create_redirect.py  update_switcher.py  update_versions.py
.github/workflows/: deploy-docs.yml  test-pipeline.yml
campbellviewer/: BladedLin_lib.py  CampbellViewer.py  HAWCStab2_lib.py  __init__.py  data_lib.py  data_template.py  datatree_model.py  globals.py  main_app.py  model_lib.py  read_hs2turbine_mode_shapes.py  utilities.py
campbellviewer/data_storage/: data.py  data_template.py  model.py
campbellviewer/dialogs/: dialogs.py
campbellviewer/interfaces/: alaska_wind.py  bladed.py  hawcstab2.py  ssi.py
campbellviewer/settings/: globals.py  view.py
docs/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  programmers_guide.rst  readme.rst  user_guide.rst  users_guide.rst
example_data/Bladed/: lin1.$02  lin1.$04  lin1.$05  lin1.$shape  lin1.%02  lin1.%05  lin1.%06
example_data/HAWCStab2/: modified.amp  modified.cmb
tests/: conftest.py
tests/interfaces/: test_bladed.py  test_hawcstab2.py
v0.1.0/: .buildinfo  api.html  genindex.html  index.html  objects.inv  programmers_guide.html  py-modindex.html  search.html  searchindex.js  users_guide.html
v0.1.0/.doctrees/: environment.pickle  index.doctree
v0.1.0/_autosummary/: campbellviewer.data_storage.data.LinearizationDataWrapper.html  campbellviewer.data_storage.data.html  campbellviewer.data_storage.data_template.AbstractLinearizationData.html  campbellviewer.data_storage.data_template.html  campbellviewer.data_storage.html  campbellviewer.datatree_model.TreeItem.html  campbellviewer.html  (+36 more)
v0.1.1/: .buildinfo  api.html  genindex.html  index.html  objects.inv  programmers_guide.html  py-modindex.html  search.html  searchindex.js  users_guide.html
v0.1.2/: .buildinfo  api.html  development.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_guide.html
v0.2.0/: .buildinfo  api.html  genindex.html  index.html  programmers_guide.html  py-modindex.html  search.html  searchindex.js  users_guide.html
(+379 files in other folders)
