[metadata]
name = campbellviewer
authors = DLR, Nordex-BLE
version = attr: campbellviewer.__version__
description = A tool to visualize modal behaviour of wind turbines.
readme = README.md
license = { file=LICENSE }
keywords = blade, turbine, dynamics, modal analysis
project_urls =
    Bug Tracker = https://github.com/DLR-AE/CampbellViewer/issues
    Documentation = ''

[options]
zip_safe = False
python_requires = >=3.9.0
packages = find:
install_requires =
	PyQt5
	qtawesome
	matplotlib>=3.9.0
	mplcursors>=0.6.0
	xarray>=2023.9.0
	netcdf4
	pybladed @ git+https://github.com/DLR-AE/pybladed.git@parsing_campbell_data

[options.entry_points]
console_scripts =
        campbellviewer = campbellviewer.main_app:main
